; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/issi/extr_is31fl3218.c_IS31FL3218_update_pwm_buffers.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/issi/extr_is31fl3218.c_IS31FL3218_update_pwm_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_pwm_buffer_update_required = common dso_local global i32 0, align 4
@g_pwm_buffer = common dso_local global i32 0, align 4
@ISSI_REG_UPDATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IS31FL3218_update_pwm_buffers() #0 {
  %1 = load i32, i32* @g_pwm_buffer_update_required, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32, i32* @g_pwm_buffer, align 4
  %5 = call i32 @IS31FL3218_write_pwm_buffer(i32 %4)
  %6 = load i32, i32* @ISSI_REG_UPDATE, align 4
  %7 = call i32 @IS31FL3218_write_register(i32 %6, i32 1)
  br label %8

8:                                                ; preds = %3, %0
  store i32 0, i32* @g_pwm_buffer_update_required, align 4
  ret void
}

declare dso_local i32 @IS31FL3218_write_pwm_buffer(i32) #1

declare dso_local i32 @IS31FL3218_write_register(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
